[metadata]
name = rackspace_cinder_extensions
summary = Rackspace Cinder Extensions
description-file =
    README.md
author = Cory Stone
author-email = cory.stone@gmail.com
maintainer = Cory Wright
maintainer-email = corywright@gmail.com
home-page = 'https://github.com/rackerlabs/rackspace_cinder_extensions'
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    rackspace_cinder_extensions
